--- a/ALURABOOKS/index.html
+++ b/ALURABOOKS/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-    <h1>AluraBooks</h1>
+    <header class="cabecalho">
+        <span class="cabecalho__menu-hamburger"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+    </header>
 </body>
 
 </html>
