--- a/ALURABOOKS/index.html
+++ b/ALURABOOKS/index.html
@@ -12,11 +12,16 @@
 
 <body>
     <header class="cabecalho">
+        <div class="container">
+    <input type="checkbox" id="menu" class="container__botao">
+    <label for="menu">
         <span class="cabecalho__menu-hamburger"></span>
+    </label>
         <img src="img/Logo.svg" alt="Logo da AluraBooks">
         <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
         <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
         <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+    </div>
     </header>
 </body>
 
