--- a/ALURABOOKS/index.html
+++ b/ALURABOOKS/index.html
@@ -18,7 +18,22 @@
             <span class="cabecalho__menu-hamburger"></span>
     </label>
     <ul>
-        
+        <li class="lista-menu_titulo">Categorias</li>
+        <li class="lista-menu_item">
+            <a href="#" class="lista-menu_link">PROGRAMAÇÃO</a>
+        </li>
+        <li class="lista-menu_item">
+            <a href="#" class="lista-menu_link">FRONT-END</a>
+        </li>
+        <li class="lista-menu_item">
+            <a href="#" class="lista-menu_link">INFRAESTRUTURA</a>
+        </li>
+        <li class="lista-menu_item">
+            <a href="#" class="lista-menu_link">BUSINESS</a>
+        </li>
+        <li class="lista-menu_item">
+            <a href="#" class="lista-menu_link">DESIGN & UX</a>
+        </li>
     </ul>
             <img src="img/Logo.svg" alt="Logo da AluraBooks">
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
