--- a/ALURABOOKS/index.html
+++ b/ALURABOOKS/index.html
@@ -35,6 +35,8 @@
             <a href="#" class="lista-menu_link">DESIGN & UX</a>
         </li>
     </ul>
+    </div>
+        <div class="container">
             <img src="img/Logo.svg" alt="Logo da AluraBooks">
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
             <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
