--- a/ALURABOOKS/index.html
+++ b/ALURABOOKS/index.html
@@ -18,29 +18,29 @@
             <span class="cabecalho__menu-hamburger"></span>
     </label>
     <ul>
-        <li class="lista-menu_titulo">Categorias</li>
-        <li class="lista-menu_item">
-            <a href="#" class="lista-menu_link">PROGRAMAÇÃO</a>
+        <li class="lista-menu__titulo">Categorias</li>
+        <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
         </li>
-        <li class="lista-menu_item">
-            <a href="#" class="lista-menu_link">FRONT-END</a>
+        <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">FRONT-END</a>
         </li>
-        <li class="lista-menu_item">
-            <a href="#" class="lista-menu_link">INFRAESTRUTURA</a>
+        <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
         </li>
-        <li class="lista-menu_item">
-            <a href="#" class="lista-menu_link">BUSINESS</a>
+        <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">BUSINESS</a>
         </li>
-        <li class="lista-menu_item">
-            <a href="#" class="lista-menu_link">DESIGN & UX</a>
+        <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">DESIGN & UX</a>
         </li>
     </ul>
     </div>
         <div class="container">
-            <img src="img/Logo.svg" alt="Logo da AluraBooks">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+            <img src="./img/Logo.svg" alt="Logo da AluraBooks">
+            <a href="#"><img src="./img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img src="./img/Compras.svg" alt="Carrinho de compras"></a>
+            <a href="#"><img src="./img/Usuario.png" alt="Meu perfil"></a>
         </div>
     </header>
 </body>
