--- a/ALURABOOKS/index.html
+++ b/ALURABOOKS/index.html
@@ -1,48 +1,122 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AluraBooks</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    
+  </head>
 
-<body>
-    <header class="cabecalho">
-        <div class="container">
-    <input type="checkbox" id="menu" class="container__botao">
-    <label for="menu">
-            <span class="cabecalho__menu-hamburger"></span>
-    </label>
-    <ul>
-        <li class="lista-menu__titulo">Categorias</li>
-        <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+  <body>
+    <header class="cabeçalho">
+      <div class="container">
+        <input type="checkbox" id="menu" class="container__botao" />
+        <label for="menu" class="container__rotulo">
+          <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+        </label>
+        <ul class="lista-menu">
+          <li class="lista-menu__titulo">Categorias</li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Programação</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Front-end</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Infraestrutura</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Business</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Design & UX</a>
+          </li>
+        </ul>
+        <img
+          src="img/Logo.svg"
+          alt="Logo da Alurabooks"
+          class="container__imagem"
+        />
+        <h1 class="container__titulo">
+          <b class="container__titulo--negrito">Alura</b>Books
+        </h1>
+      </div>
+
+      <ul class="opções">
+        <input type="checkbox" id="opções-menu" class="opções__botão" />
+        <label for="opções-menu" class="opções__rotulo">
+          <li class="opções__item">Categorias</li>
+        </label>
+
+        <ul class="lista-menu">
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Programação</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Front-end</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Infraestrutura</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Business</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Design & UX</a>
+          </li>
+        </ul>
+
+        <li class="opções__item">
+          <a href="#" class="opções__link">Favoritos</a>
         </li>
-        <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">FRONT-END</a>
+        <li class="opções__item">
+          <a href="#" class="opções__link">Minha estante</a>
         </li>
-        <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
-        </li>
-        <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">BUSINESS</a>
-        </li>
-        <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">DESIGN & UX</a>
-        </li>
-    </ul>
-    </div>
-        <div class="container">
-            <img src="./img/Logo.svg" alt="Logo da AluraBooks">
-            <a href="#"><img src="./img/Favoritos.svg" alt="Meus favoritos"></a>
-            <a href="#"><img src="./img/Compras.svg" alt="Carrinho de compras"></a>
-            <a href="#"><img src="./img/Usuario.png" alt="Meu perfil"></a>
-        </div>
+      </ul>
+
+      <div class="container">
+        <a href="#"
+          ><img    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+            src="img/Favoritos.svg"
+            alt="Meus favoritos"
+            class="container__imagem container__imagem-transparente"
+        /></a>
+        <a href="#" class="container__link">
+          <img
+            src="img/Compras.svg"
+            alt="Carrinhos de compras"
+            class="container__imagem"
+          />
+          <p class="container__texto">Minha sacola</p>
+        </a>
+        <a href="#" class="container__link">
+          <img
+            src="img/Usuario.png"
+            alt="Meu perfil"
+            class="container__imagem"
+          />
+          <p class="container__texto">Meu perfil</p>
+        </a>
+      </div>
     </header>
-</body>
-
+    <section class="banner">
+      <h2 class="banner__titulo">
+        Já sabe por onde começar?
+      </h2>
+      <p class="banner__texto">
+        Encontre em nossa estante o que precisa para seu desenvolvimento!
+      </p>
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    </section>
+    <section class="carrossel">
+    
+    </section>
+  </body>
 </html>
